# praxis

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: commands.md  vector-indexing.md
praxis/: Cargo.toml
praxis-core/: Cargo.toml
praxis-core/src/: budget.rs  inclusion.rs  lib.rs  markdown.rs  output.rs  plugin.rs  scanner.rs  scorer.rs  tokenizer.rs  tree.rs  types.rs
praxis-core/src/conversation/: boost.rs  classifier.rs  dedup.rs  extract.rs  filter.rs  mod.rs  resolver.rs  stage_markers.rs  truncate.rs  turn_parser.rs
praxis-core/src/conversation/render/: decision_json.rs  decision_md.rs  flat_json.rs  flat_md.rs  hierarchical_json.rs  hierarchical_md.rs  mod.rs  stages.rs
praxis-core/src/diff/: bundle.rs  conversation_xref.rs  impact_radius.rs  mod.rs  relevance.rs  render_json.rs  render_md.rs  symbol_diff.rs  tree_diff.rs
praxis-core/src/inspect/: detect.rs  format_context.rs  format_diff.rs  format_json.rs  mod.rs  validate.rs
praxis-core/src/types/: changed_file.rs  classification.rs  conversation_memory.rs  dependency.rs  diff_hunk.rs  extracted_line.rs  file_entry.rs  fingerprintable.rs  git_metadata.rs  mod.rs  polarity.rs  repo_index.rs  stage_marker.rs  symbol.rs  symbol_change.rs  symbol_change_kind.rs  symbol_kind.rs  visibility.rs
praxis-core/src/util/: confidence.rs  fingerprint.rs  mod.rs  normalize.rs  path.rs  stopwords.rs  word_boundary.rs
praxis-lang-angelscript/: Cargo.toml
praxis-lang-angelscript/src/: lib.rs
praxis-lang-cpp/: Cargo.toml
praxis-lang-cpp/src/: lib.rs
praxis-lang-elixir/: Cargo.toml
praxis-lang-elixir/src/: lib.rs
praxis-lang-go/: Cargo.toml
praxis-lang-go/src/: lib.rs
praxis-lang-python/: Cargo.toml
praxis-lang-python/src/: lib.rs
praxis-lang-rust/: Cargo.toml
praxis-lang-rust/src/: lib.rs
praxis-lang-ts/: Cargo.toml
praxis-lang-ts/src/: lib.rs
praxis-vector/: Cargo.toml
praxis-vector/src/: change.rs  chunker.rs  config.rs  db.rs  embedder.rs  indexer.rs  lib.rs  scorer.rs  types.rs
praxis/src/: main.rs
praxis/src/cli/: build.rs  common.rs  diff.rs  index.rs  inspect.rs  mod.rs  prune.rs  summarize.rs
praxis/tests/: integration_tests.rs
tests/fixtures/: context_8k.json  conversation.md  create_diff_repo.sh  diff_main_auth.json
