[workspace]
members = [
    "praxis",
    "praxis-core",
    "praxis-lang-rust",
    "praxis-lang-go",
    "praxis-lang-ts",
]
resolver = "2"

[workspace.package]
edition  = "2024"
version  = "0.1.0"
authors  = ["Valeryi Savich <relrin78@gmail.com>"]
license  = "BSD-3"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
indexmap = { version = "2.12.1", features = ["serde"] }
ignore = "0.4.25"
git2 = "0.20.3"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
walkdir = "2.5.0"
