[package]
name = "praxis-lang-rust"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
syn = { version = "2.0.117", features = ["full", "visit"] }
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
toml = "1.0.3"
quote = "1.0.44"

praxis-core = { path = "../praxis-core" }