[package]
name = "praxis-lang-ts"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tree-sitter = "0.26.6"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"

serde_json.workspace = true

praxis-core = { path = "../praxis-core" }