[package]
name = "praxis-vector"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
lancedb.workspace = true
fastembed.workspace = true
sha2.workspace = true
toml.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
tokio.workspace = true
futures = "0.3"

praxis-core = { path = "../praxis-core" }

[dev-dependencies]
tempfile.workspace = true
