[package]
name = "praxis"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "praxis"
path = "src/main.rs"

[features]
default = []
vector = ["dep:praxis-vector"]

[dependencies]
anyhow.workspace     = true
clap.workspace       = true
git2.workspace       = true
indexmap.workspace   = true
serde_json.workspace = true

praxis-core        = { path = "../praxis-core" }
praxis-lang-go     = { path = "../praxis-lang-go" }
praxis-lang-python = { path = "../praxis-lang-python" }
praxis-lang-rust   = { path = "../praxis-lang-rust" }
praxis-lang-ts     = { path = "../praxis-lang-ts" }
praxis-vector      = { path = "../praxis-vector", optional = true }

[dev-dependencies]
serde_json = { workspace = true }
